Add template editor to legend tree

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -611,7 +611,8 @@
                 "downloadButtonYes": "Ja",
                 "downloadButtonNo": "Nein",
                 "outputFormatText": "Ausgabeformat",
-                "title": "Legende"
+                "title": "Legende",
+                "templateEditor": "Templates editieren"
             }
         }
     },
