--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -609,7 +609,8 @@
                 "downloadButtonYes": "Yes",
                 "downloadButtonNo": "No",
                 "outputFormatText": "Output Format",
-                "title": "Legend"
+                "title": "Legend",
+                "templateEditor": "Edit templates"
             }
         }
     },
