Improve template editor

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -374,6 +374,14 @@
             }
         }
     },
+    "Koala.view.form.field.TemplateEditor": {
+        "config": {
+            "data": {
+                "insertAttribute": "Attribut einfügen",
+                "selectTemplate": "Template auswählen"
+            }
+        }
+    },
     "Koala.view.form.Print": {
         "config": {
             "data": {
