--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -575,13 +575,14 @@
                 "logoTooltip": "Link zur BfS-Homepage",
                 "headerTitle": "GEOPORTAL",
                 "alertBtnTooltip": "Ereignisinformation",
-                "routineMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 0;'>[[id]]</p> (unverändert)",
-                "alertMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 0;'>[[id]]</p> <div style='color:red; margin: 0;'> (modifiziert!)</div>",
+                "routineMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 5px 0 10px 0;'>[[title]]</p> (unverändert)",
+                "alertMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 5px 0 10px 0;'>[[title]]</p> <div style='color:red; margin: 0;'> (modifiziert!)</div>",
                 "htmlMessageBody": "<div>" +
                     "<b>geändert am:</b> [[modified]]<br>" +
                     "<b>geändert von:</b> [[modified_by]]<br>" +
                     "<b>Ist dies eine Übung?</b> [[Exercise]]<br>" +
                     "<b>Ereigniszeit:</b> [[TimeOfEvent]]<br>" +
+                    "<b>ID:</b> [[id]]<br>" +
                     "<b>Beschreibung:</b> [[description]]<br>" +
                     "<b>Szenariophase:</b> [[ScenarioPhase.title]]<br>" +
                     "<b>Ereignisort:</b> [[ScenarioLocation.title]]<br>" +
