Add support for vector layer timeseries charts

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1620,13 +1620,15 @@
         "config": {
             "data": {
                 "titleText": "Barchart Einstellungen",
+                "xAxisAttribute": "Attribut X-Achse",
                 "yAxisAttribute": "Attribut Y-Achse",
                 "yAxisScale": "Skalierung Y-Achse",
                 "groupAttribute": "Attribut Gruppierung",
                 "detectionLimitAttribute": "Attribut Nachweisgrenze",
                 "uncertaintyAttribute": "Attribut Unsicherheit",
                 "okButtonText": "Ok",
-                "cancelButtonText": "Abbrechen"
+                "cancelButtonText": "Abbrechen",
+                "timeseriesTitle": "Zeitreihe Einstellungen"
             }
         }
     },
