--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1603,6 +1603,7 @@
         "config": {
             "data": {
                 "titleText": "Bar chart settings",
+                "xAxisAttribute": "X axis attribute",
                 "yAxisAttribute": "Y axis attribute",
                 "yAxisScale": "Y axis scale",
                 "groupAttribute": "Grouping attribute",
