--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1757,7 +1757,8 @@
                 "permalinkButtonText": "Permalink",
                 "spatialSearchTitle": "Räumliche Suche",
                 "stationSearchTitle": "ODL Sondenstandorte",
-                "metadataSearchTitle": "Daten und Dienste des Bfs"
+                "metadataSearchTitle": "Daten und Dienste des Bfs",
+                "dokpoolEvents": "Ereignisse"
             }
         }
     },
@@ -1780,6 +1781,13 @@
             "data": {
                 "title": "Permalink",
                 "applyFilterCheckboxBoxLabel": "Layerfilter in Permalink übernehmen"
+            }
+        }
+    },
+    "Koala.view.panel.MobileEvents": {
+        "config": {
+            "data": {
+                "title": "Ereignisse"
             }
         }
     },
