--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1738,7 +1738,8 @@
                 "permalinkButtonText": "Permalink",
                 "spatialSearchTitle": "Spatial search",
                 "stationSearchTitle": "Gamma Dose Rate Stations",
-                "metadataSearchTitle": "BfS data and services"
+                "metadataSearchTitle": "BfS data and services",
+                "dokpoolEvents": "Events"
             }
         }
     },
@@ -1761,6 +1762,13 @@
             "data": {
                 "title": "Permalink",
                 "applyFilterCheckboxBoxLabel": "Apply layer filters in permalink"
+            }
+        }
+    },
+    "Koala.view.panel.MobileEvents": {
+        "config": {
+            "data": {
+                "title": "Events"
             }
         }
     },
