--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1787,7 +1787,19 @@
     "Koala.view.panel.MobileEvents": {
         "config": {
             "data": {
-                "title": "Ereignisse"
+                "title": "Ereignisse",
+                "routineMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 5px 0 10px 0;'>[[title]]</p> (unverändert)",
+                "alertMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 5px 0 10px 0;'>[[title]]</p> <div style='color:red; margin: 0;'> (modifiziert!)</div>",
+                "htmlMessageBody": "<div>" +
+                    "<b>geändert am:</b> [[modified]]<br>" +
+                    "<b>geändert von:</b> [[modified_by]]<br>" +
+                    "<b>Ist dies eine Übung?</b> [[Exercise]]<br>" +
+                    "<b>Ereigniszeit:</b> [[TimeOfEvent]]<br>" +
+                    "<b>ID:</b> [[id]]<br>" +
+                    "<b>Beschreibung:</b> [[description]]<br>" +
+                    "<b>Szenariophase:</b> [[ScenarioPhase.title]]<br>" +
+                    "<b>Ereignisort:</b> [[ScenarioLocation.title]]<br>" +
+                    "</div>"
             }
         }
     },
