add templates to customize / add OK-Cancel

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -553,8 +553,10 @@
                 "okText": "Ok",
                 "cancelText": "Abbrechen",
                 "editTemplates": "Templates anpassen",
-                "title": "Titel",
-                "tooltip": "Tooltip"
+                "title": "Legende",
+                "tooltip": "Tooltip",
+                "xAxisLabel": "xAxisLabel",
+                "yAxisLabel": "yAxisLabel"
             }
         }
     },
