--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -551,8 +551,10 @@
                 "okText": "Ok",
                 "cancelText": "Cancel",
                 "editTemplates": "Edit templates",
-                "title": "Title",
-                "tooltip": "Tooltip"
+                "title": "Legend",
+                "tooltip": "Tooltip",
+                "xAxisLabel": "xAxisLabel",
+                "yAxisLabel": "yAxisLabel"
             }
         }
     },
