--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -193,7 +193,7 @@
         "config": {
             "data": {
                 "warning": "Warnung",
-                "toManyFeatures": "Sie haben mehr als 3 Features selektiert, bitte schränken Sie zuvor Ihre Auswahl ein (z.B. durch vergrößern der Zoomstufe)."
+                "tooManyFeatures": "Sie haben mehr als 3 Features selektiert, bitte schränken Sie zuvor Ihre Auswahl ein (z.B. durch vergrößern der Zoomstufe)."
             }
         }
     },
@@ -553,6 +553,7 @@
                 "okText": "Ok",
                 "cancelText": "Abbrechen",
                 "editTemplates": "Templates anpassen",
+                "editSettings": "Spaltenauswahl anpassen",
                 "title": "Legende",
                 "tooltip": "Tooltip",
                 "xAxisLabel": "xAxisLabel",
