--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -731,7 +731,8 @@
                 "emptyTemplateMessage": "Please select a template.",
                 "selectionEnabled": "(Selection tool is activated!)",
                 "copyStyleLabel": "Copy style",
-                "templateStyleLabel": "Style from template"
+                "templateStyleLabel": "Style from template",
+                "noCloneAllowed": "The selected layer does not allow copying"
             }
         }
     },
