--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -732,7 +732,8 @@
                 "selectionEnabled": "(Selection tool is activated!)",
                 "copyStyleLabel": "Copy style",
                 "templateStyleLabel": "Style from template",
-                "noCloneAllowed": "The selected layer does not allow copying"
+                "noCloneAllowed": "The selected layer does not allow copying",
+                "noLayerSelected": "No layer selected to clone"
             }
         }
     },
