--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -748,6 +748,13 @@
             }
         }
     },
+    "Koala.view.grid.FilterGrid": {
+        "config": {
+            "data": {
+                "filterNullValues": "Filter NULL values"
+            }
+        }
+    },
     "Koala.view.window.FilterGridWindow": {
         "config": {
             "data": {
