Transforms sort selcted button (toggle to default)

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -587,7 +587,7 @@
                 "multiEditTooltip": "Alle selektierten Zeilen ändern",
                 "deleteTitle": "Löschen",
                 "deleteMessage": "Wollen Sie die {0} selektierten Objekte löschen?",
-                "toggleSortSelectedText": "Selektierte nach oben",
+                "sortSelectedText": "Selektierte nach oben",
                 "addColumnTooltip": "Spalte hinzufügen",
                 "columnPrefix": "Spalte_"
             }
