Adds "edit chart settings" menu entry

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -552,7 +552,7 @@
                 "minMaxWindowTitle": "y-Achse ändern",
                 "okText": "Ok",
                 "editTemplates": "Templates anpassen",
-                "editSettings": "Spaltenauswahl anpassen",
+                "editSettings": "Einstellungen anpassen",
                 "title": "Legende",
                 "tooltip": "Tooltip",
                 "xAxisLabel": "xAxisLabel",
