--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -550,7 +550,7 @@
                 "minMaxWindowTitle": "Change y axis",
                 "okText": "Ok",
                 "editTemplates": "Edit templates",
-                "editSettings": "Edit column settings",
+                "editSettings": "Edit settings",
                 "title": "Legend",
                 "tooltip": "Tooltip",
                 "xAxisLabel": "xAxisLabel",
