make featureIdentifyField customizable on vector data import

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1664,7 +1664,9 @@
                 "uncertaintyAttribute": "Attribut Unsicherheit",
                 "okButtonText": "Ok",
                 "cancelButtonText": "Abbrechen",
-                "timeseriesTitle": "Zeitreihe Einstellungen"
+                "timeseriesTitle": "Zeitreihe Einstellungen",
+                "olTitleText": "Layer Einstellungen",
+                "featureIdentifyField": "Feature ID"
             }
         }
     },
