--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -797,7 +797,7 @@
     "Koala.view.widget.ElanScenarioButton": {
         "config": {
             "data": {
-                "elanscenarios": "elanscenarios",
+                "elanscenarios": "Ereignisse",
                 "helpTooltip": "Hilfe"
             }
         }
