revert to MVC structure

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -794,7 +794,7 @@
             }
         }
     },
-    "Koala.view.widget.ElanScenarioButton": {
+    "Koala.view.button.ElanScenarioButton": {
         "config": {
             "data": {
                 "elanscenarios": "Ereignisse",
