--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -790,7 +790,7 @@
             }
         }
     },
-    "Koala.view.widget.ElanScenarioButton": {
+    "Koala.view.button.ElanScenarioButton": {
         "config": {
             "data": {
                 "elanscenarios": "elanscenarios",
