Add lada session check

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -6,6 +6,7 @@
             "applicationUpdateText": "Für diese Anwendung steht ein Update zur Verfügung. Jetzt neu laden?",
             "ssoExpiredTitle" : "Erneutes Login erforderlich!",
             "ssoExpiredBody" : "Ihre Sitzung ist abgelaufen.<br/>Soll die Sitzung erneuert werden?",
+            "ssoExpiredFailed": "Die Sitzung konnte nicht erneuert werden.",
             "leavePageText": "Wollen Sie diese Seite verlassen/neu laden? Nicht gespeicherte lokale Änderungen gehen dadurch verloren."
         }
     },
