add tooltip to scenario button / minor cleanups

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -802,7 +802,7 @@
         "config": {
             "data": {
                 "elanscenarios": "Ereignisse",
-                "helpTooltip": "Hilfe"
+                "helpTooltip": "Ereignisinformationen anzeigen"
             }
         }
     },
