add missing label for Y-Axis minMaxWindow

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -553,6 +553,7 @@
                 "changeMinMaxText": "Min/Max ändern",
                 "minMaxWindowTitle": "y-Achse ändern",
                 "okText": "Ok",
+                "cancelText": "Abbrechen",
                 "editTemplates": "Templates anpassen",
                 "editSettings": "Einstellungen anpassen",
                 "title": "Legende",
