--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -551,6 +551,7 @@
                 "changeMinMaxText": "Change min/max",
                 "minMaxWindowTitle": "Change y axis",
                 "okText": "Ok",
+                "cancelText": "Cancel",
                 "editTemplates": "Edit templates",
                 "editSettings": "Edit settings",
                 "title": "Legend",
