adjust scenario template

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -791,6 +791,8 @@
                 "key_EventType_title": "Art des Ereignisses",
                 "key_TimeOfEvent": "Ereigniszeit",
                 "key_OperationMode_title": "Betriebsart",
+                "key_SectorizingNetworks": "Sektorierung Netze",
+                "key_SectorizingSampleTypes": "Sektorierung Umweltbereiche",
                 "key_modified": "geändert am",
                 "key_modified_by": "geändert von",
                 "true": "Ja",
@@ -1850,6 +1852,8 @@
                 "key_EventType_title": "Art des Ereignisses",
                 "key_TimeOfEvent": "Ereigniszeit",
                 "key_OperationMode_title": "Betriebsart",
+                "key_SectorizingNetworks": "Sektorierung Netze",
+                "key_SectorizingSampleTypes": "Sektorierung Umweltbereiche",
                 "key_modified": "geändert am",
                 "key_modified_by": "geändert von",
                 "true": "Ja",
