Add special external WMS feature info handling

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -570,7 +570,8 @@
                 "minimize": "Cartowindow minimieren",
                 "cloneLayer": "Layer klonen",
                 "editTemplates": "Templates anpassen",
-                "templateEditor": "Templates editieren"
+                "templateEditor": "Templates editieren",
+                "hoverInfo": "HoverInfo"
             }
         }
     },
