--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -568,7 +568,8 @@
                 "minimize": "Minimize carto windows",
                 "cloneLayer": "Clone layer",
                 "editTemplates": "Edit templates",
-                "templateEditor": "Edit templates"
+                "templateEditor": "Edit templates",
+                "hoverInfo": "HoverInfo"
             }
         }
     },
