Use dynamic template when hovering on external WMS objects

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -538,7 +538,9 @@
                 "closeTooltip": "Schließen",
                 "gridTabTitle": "Tabellarische Ansicht",
                 "htmlTabTitle": "Information",
-                "hoverinfoTabTitle": "Information"
+                "hoverinfoTabTitle": "Information",
+                "error": "Fehler",
+                "jsonNotSupported": "Der Dienst unterstützt keine Feature-Info-Ausgabe im JSON-Format."
             }
         }
     },
