Add layer/feature selection for print

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -83,6 +83,13 @@
             }
         }
     },
+    "Koala.view.button.FeatureSelectButton": {
+        "config": {
+            "data": {
+                "tooltip": "Layerdaten auswählen"
+            }
+        }
+    },
     "Koala.view.button.SelectFeatures": {
         "config": {
             "data": {
