Table print fixes

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -442,7 +442,8 @@
                 "northArrow": "Nordpfeil",
                 "scalebar": "Massstabsleiste",
                 "unlinkTooltip": "Link entfernen",
-                "templateBrokenMessage": "Das Template enthält Fehler und kann nicht verwendet werden."
+                "templateBrokenMessage": "Das Template enthält Fehler und kann nicht verwendet werden.",
+                "layerDataTitle": "Tabellen drucken"
             }
         }
     },
