prepare GUI for accessibility statement

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1528,6 +1528,9 @@
                 },
                 "sitePolicy": {
                     "title": "Nutzungsbedingungen"
+                },
+                "accessibility": {
+                    "title": "Barrierefreiheit"
                 }
             }
         }
