--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -1516,6 +1516,21 @@
             }
         }
     },
+    "Koala.view.window.ImprintModel": {
+        "config": {
+            "data": {
+                "imprint": {
+                    "title": "Imprint"
+                },
+                "sitePolicy": {
+                    "title": "Terms of use"
+                },
+                "accessibility": {
+                    "title": "Accessibility"
+                }
+            }
+        }
+    },
     "BasiGX.view.window.FileUploadWindow": {
         "config": {
             "data": {
