initial commit to include legally required "acessibility statement"

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -507,6 +507,7 @@
                 "timereference": "Zeitbezug",
                 "fullscreen": "Vollbild",
                 "imprint": "Impressum",
+                "accessibility": "Barrierefreiheit",
                 "privacy": "Datenschutz",
                 "about": "Login",
                 "help": "Hilfe",
