Revert "adjustments due to changes on Dokpool-IRIX schema"
This reverts commit 99afbe05f1f3cbcded2d0bbc79047719257d71e3.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -507,6 +507,7 @@
                 "timereference": "Zeitbezug",
                 "fullscreen": "Vollbild",
                 "imprint": "Impressum",
+                "accessibility": "Barrierefreiheit",
                 "privacy": "Datenschutz",
                 "about": "Login",
                 "help": "Hilfe",
@@ -1528,6 +1529,9 @@
                 },
                 "sitePolicy": {
                     "title": "Nutzungsbedingungen"
+                },
+                "accessibility": {
+                    "title": "Barrierefreiheit"
                 }
             }
         }
