--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -164,12 +164,12 @@
                 "downloadChartDataMsgButtonYes": "Ok",
                 "downloadChartDataMsgButtonNo": "Cancel",
                 "okText": "Ok",
-                "cancelText": "Abbrechen",
-                "magnification": "Auflösung",
+                "cancelText": "Cancel",
+                "magnification": "Resolution",
                 "original": "Original",
-                "twofold": "2-fach",
-                "threefold": "3-fach",
-                "fourfold": "4-fach"
+                "twofold": "2x",
+                "threefold": "3x",
+                "fourfold": "4x"
             }
         }
     },
