--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -493,6 +493,7 @@
                 "themes": "",
                 "loading": "Load",
                 "wmsimport": "Add external WMS",
+                "routing": "Routing",
                 "vectorimport": "Import local files",
                 "print": "Print",
                 "tools": "Tools",
