--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -496,6 +496,7 @@
                 "loading": "Laden",
                 "wmsimport": "WMS hinzuladen",
                 "vectorimport": "Vektordaten laden",
+                "routing": "Routing",
                 "print": "Drucken",
                 "tools": "Werkzeuge",
                 "draw": "Zeichnen",
