Basic form for routing requests

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -855,6 +855,19 @@
             }
         }
     },
+    "Koala.view.window.Routing": {
+        "config": {
+            "data": {
+                "i18n": {
+                    "title": "Routenplanung",
+                    "startFieldTitle": "Start",
+                    "targetFieldTitle": "Ziel",
+                    "routingProfileFieldTitle": "Profil",
+                    "computeRouteButtonText": "Route Berechnen"
+                }
+            }
+        }
+    },
     "Koala.view.window.StyleSelectWindow": {
         "config": {
             "data": {
